export type Image = {
    path: string;
};
