@startuml "Classes Diagram"

package Enums {
    Enum Civility {
        MR
        MME
    }

    Enum MaritalStatus {
        ' Célibataire
        SINGLE
        ' Marié
        MARRIED
        ' Veuf/Veuve
        WIDOW
    }

    Enum Role {
        HOUSING_APPLICANT
        PROPERTY_OWNER
        ADMIN
    }


    Enum RentType {
        LOCATION
        COLOCATION
        SHORT_TERM
    }

    Enum RoomType {
        ' Pièces entrant dans le calcul
        ' chambre
        BEDROOM
        ' salon/salle de vie
        LIVING_ROOM
        ' cuisine
        KITCHEN

        ' Pièces supplémentaires
        ' douche
        BATHROOM
        ' buanderie
        LAUDRY
        ' grenier
        ATTIC
        ' sous-sol
        BASEMENT
        ' salle à manger
        DINING_ROOM
        ' garage
        GARAGE
        ' balcon
        BALCONY
        ' veranda
        VERANDA
        ' terasse
        TERRACE
    }

    Enum AmenityType {
        WIFI
        ' Canal+
        CABLE
        HOT_WATER
        TWIN_BED
        RADIATOR
        OTHER
    }

    Enum ValidationState {
        VALID
        INVALID
        IN_REVIEW
    }

    Enum RentalAgreementStatus {
        DRAFT
        VALIDATED_BY_OWNER
        VALIDATED_BY_USER
        NEEDS_REVIEW
    }

    Enum InventoryDocumentStatus {
        VALIDATED_BY_OWNER
        VALIDATED_BY_USER
    }

    Enum RentalStatus {
        RESERVED
        ACTIVE
        CLOSED
    }

}

class Image {
    path: string
}

class User {
    firstName: string
    lastName: string
    username: string
    address: string | null
    phoneNumber: string
    email: string
    civicTitle: Civility | null
    birthDate: Date | null
    birthPlace: string | null
    martialStatus: MaritalStatus | null
    imageURL: string | null
    role: Role
}


class Property {
    rentType: RentType
    noOfRooms: int
    surfaceArea: int
    commune: string
    ' Quartier
    district: string
    city: string
    address: string | null
    longitude: float 
    latitude: float
}


class Document {
    path: string
}

class PaymentProof {
    uploadedAt: Date
    validationState: ValidationState | IN_REVIEW
}

class RentReceipt {
    sentAt: Date
}

' Contrat de location
class RentalAgreement {
    createdAt: Date
    status: RentalAgreementStatus | DRAFT
}
' Etat des lieux
class InventoryDocument {
    createdAt: Date
    status: InventoryDocumentStatus | VALIDATED_BY_OWNER
}

' Pièce
class Room {
    type: RoomType
}

' Accessoires
class Amenity {
    name: string
    type: AmenityType
}

' Les listings seront les objets
' qui vont être recherchés par les users
class Listing {
    ' prix de location
    housingFee: int
    title: string
    description: text
    ' Périodicité si forfait    
    housingPeriod: int | null
    cautionMonthsPaymentAdvance: int | null
    agencyMonthsPaymentAdvance: int | null
    noOfFreeRooms: int
    open: boolean
}


' Classe pour indiquer la location d'un client
' pendant une période de temps
class Rental {
    startDate: Date|null
    endDate: Date|null
    status: RentalListingStatus
    finalPrice: int
}

class Payment {
    amount: int
    issuedAt: Date
}

Document <|- PaymentProof
Document <|- RentalAgreement
Document <|- InventoryDocument
Document <|- RentReceipt

User "1" o-- "*" Property : Is owner
Property "1" *-- "1" Room

Property "1" *-- "*" Listing

Property "1" *-- "*" Amenity

Listing "1" -- "0..*" Rental

note left
The number of active
rentals cannot exceed
the number of
free rooms.
endnote

User "1" o-- "0..1" Rental : Rent a Room

User "1" -- "*" Payment
Rental "1" -left- "*" Payment

Rental "1" -- "1" InventoryDocument
Rental "1" -- "0..1" RentalAgreement
Rental "1" -- "0..*" PaymentProof
Rental "1" -- "0..*" RentReceipt


Property "1" *---left--- "1..*" Image

User "1" --- "0..1" Image : "Signature"
@enduml